Attempt to add additional responsiveness within rooms

--- a/PartyPlaylists.MVC/Views/Home/Index.cshtml
+++ b/PartyPlaylists.MVC/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 </div>
 
 <div class="row justify-content-center">
-    <div class="col-6">
+    <div class="col-sm-6">
         <div class="collapse mt-2 text-white" id="joinRoomCollapse">
             <div class="card card-body">
                 <form method="get" asp-controller="Home" asp-action="JoinRoom">
@@ -32,7 +32,7 @@
             </div>
         </div>
     </div>
-    <div class="col-6">
+    <div class="col-sm-6">
         <div class="collapse mt-2 text-white" id="createRoomCollapse">
             <div class="card card-body">
                 <form method="post" asp-controller="Home" asp-action="CreateRoom">
