--- a/PartyPlaylists.MVC/Views/Room/Components/_roomSongTableRow.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Components/_roomSongTableRow.cshtml
@@ -5,15 +5,17 @@
     <tr>
         <td class="p-0 align-middle">
             <div class="row" style="display:table;">
-                <div class="col-3 middle-table-cell">
-                    <img src="@item.Song.AlbumArt" class="img-fluid" />
+                <div class="d-none d-md-block">
+                    <div class="col-lg-3 col-md-3 middle-table-cell">
+                        <img src="@item.Song.AlbumArt" class="img-fluid" />
+                    </div>
                 </div>
-                <div class="col-7 middle-table-cell">
+                <div class="col-lg-7 middle-table-cell">
                     <p class="mb-0">@item.Song.Name</p>
                     <p class="mb-0 text-muted align-bottom">@item.Song.Artist</p>
                 </div>
-                <div class="col-1 middle-table-cell">
-                    <p id="@($"songRating{item.SongId}")" class="mb-0">
+                <div class="col-lg-1 middle-table-cell">
+                    <p id="@($"songRating{item.SongId}")" class="mb-0 mr-1">
                         <button class="btn btn-primary btn-sm" type="button" name="addVoteButton" value="@item.SongId">+@item.SongRating</button>
                     </p>
                 </div>
