--- a/PartyPlaylists.MVC/Views/Room/Components/_roomSongTableRow.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Components/_roomSongTableRow.cshtml
@@ -26,6 +26,6 @@
                 </div>
             </div>
         </td>
-        <td hidden name="playerUri">@item.Song.SpotifyId</td>
+        <td hidden name="playerUri">@item.Song.ServiceId</td>
     </tr>
 }
